# GoldenPhoenix

./: CMakeLists.txt  Makefile  Readme.md  cmake_installer.sh
cmake/: FindDoxygen.cmake
data/Translation/: En  En.lang  Fr  Fr.lang  Kl.lang
data/pieces/: room.room  testroom.txt
data/rooms/: default.player  default.rooms  readme.player  readme.room  readme.rooms  room.room  testroom.txt
doc/Class Diagramm/: Diagramm.puml
doc/Diagramms/: Diagramm.puml
doc/Diagrams/: Class.puml  Gantt.puml
doc/diagrams/: Class.puml  Gantt.puml
doc/doxygen/: Doxyfile.in
doc/doxygen/html/: Cleanup_8hpp_source.html  Exceptions_8hpp_source.html  Game_8hpp_source.html  SDL_8h.html  SDL_8h__dep__incl.map  SDL_8h__dep__incl.md5  SDL_8h__incl.map  SDL_8h__incl.md5  SDL_8h_source.html  SDL__assert_8h_source.html  SDL__atomic_8h.html  SDL__atomic_8h__dep__incl.map  SDL__atomic_8h__dep__incl.md5  SDL__atomic_8h__incl.map  SDL__atomic_8h__incl.md5  SDL__atomic_8h_source.html  SDL__audio_8h.html  SDL__audio_8h__dep__incl.map  SDL__audio_8h__dep__incl.md5  SDL__audio_8h__incl.map  SDL__audio_8h__incl.md5  SDL__audio_8h_source.html  SDL__bits_8h.html  SDL__bits_8h__incl.map  SDL__bits_8h__incl.md5  SDL__bits_8h_source.html  SDL__blendmode_8h.html  SDL__blendmode_8h__dep__incl.map  SDL__blendmode_8h__dep__incl.md5  SDL__blendmode_8h__incl.map  SDL__blendmode_8h__incl.md5  SDL__blendmode_8h_source.html  SDL__clipboard_8h.html  SDL__clipboard_8h__dep__incl.map  SDL__clipboard_8h__dep__incl.md5  SDL__clipboard_8h__incl.map  SDL__clipboard_8h__incl.md5  SDL__clipboard_8h_source.html  SDL__config_8h_source.html  SDL__cpuinfo_8h.html  (+555 more)
doc/doxygen/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_a.js  defines_2.js  enums_0.js  enumvalues_0.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  searchdata.js  typedefs_0.js  variables_11.js  variables_2.js  variables_3.js  variables_4.js  variables_a.js
doc/doxygen/latex/: SDL_8h.tex  SDL_8h__dep__incl.md5  SDL_8h__incl.md5  SDL__atomic_8h.tex  SDL__atomic_8h__dep__incl.md5  SDL__atomic_8h__incl.md5  SDL__audio_8h.tex  SDL__audio_8h__dep__incl.md5  SDL__audio_8h__incl.md5  SDL__bits_8h.tex  SDL__bits_8h__incl.md5  SDL__blendmode_8h.tex  SDL__blendmode_8h__dep__incl.md5  SDL__blendmode_8h__incl.md5  SDL__clipboard_8h.tex  SDL__clipboard_8h__dep__incl.md5  SDL__clipboard_8h__incl.md5  SDL__cpuinfo_8h.tex  SDL__cpuinfo_8h__dep__incl.md5  SDL__cpuinfo_8h__incl.md5  SDL__egl_8h.tex  SDL__egl_8h__incl.md5  SDL__endian_8h.tex  SDL__endian_8h__dep__incl.md5  SDL__endian_8h__incl.md5  SDL__error_8h.tex  SDL__error_8h__dep__incl.md5  SDL__error_8h__incl.md5  SDL__events_8h.tex  SDL__events_8h__dep__incl.md5  SDL__events_8h__incl.md5  SDL__filesystem_8h.tex  SDL__filesystem_8h__dep__incl.md5  SDL__filesystem_8h__incl.md5  SDL__gamecontroller_8h.tex  SDL__gamecontroller_8h__dep__incl.md5  SDL__gamecontroller_8h__incl.md5  SDL__gesture_8h.tex  SDL__gesture_8h__dep__incl.md5  SDL__gesture_8h__incl.md5  (+243 more)
src/: main.cpp
src/Core/: AudioManager.cpp  Game.cpp  Game.h  Game.hpp  GameManager.cpp  GameManager.h  Graphics.cpp  Graphics.h  Timer.cpp  Timer.h  main.cpp
src/Entities/: AnimatedTexture.h  GameEntity.h  Texture.cpp  Texture.h
src/GoldenPhenix/: Castle.cpp  Castle.h  Door.h  Entity.cpp  Entity.h  Inventory.cpp  Inventory.h  Object.cpp  Player.cpp  Player.h  Room.cpp  Room.h  StartScreen.cpp  StartScreen.h  main.cpp
src/GoldenPhenix/Core/: Castle.cpp  Castle.h  Door.cpp  Door.h  ItemStack.cpp  ItemStack.h  Object.cpp  Object.h  Room.cpp  Room.h  StartScreen.cpp  StartScreen.h  Trader.cpp  Trader.h
src/GoldenPhenix/Entities/: Bat.cpp  Bat.h  Entity.cpp  Entity.h  ItemStack.cpp  ItemStack.h  Object.h  Player.cpp  Player.h  Rat.cpp  Rat.h
src/GoldenPhenix/Helpers/: Exceptions.cpp  Exceptions.h  GetResourcePath.h  Vector2.h
src/Helpers/: Cleanup.h  Exceptions.cpp  Exceptions.h  Exceptions.hpp  GetResourcePath.cpp  GetResourcePath.h  GetResourcePath.hpp  Vector2.h
src/Rendering/: Sound.cpp  Sound.h  Texture.cpp  Texture.h  Texture.hpp
src/SDL2/: main.cpp
src/SDL2/Core/: AssetsManager.cpp  AssetsManager.h  AudioManager.cpp  AudioManager.h  GameManager.cpp  GameManager.h  Graphics.cpp  Graphics.h  InputsManager.cpp  InputsManager.h  Timer.cpp  Timer.h  Translation.cpp  Translation.h
src/SDL2/Entities/: AnimatedTexture.cpp  AnimatedTexture.h  GameEntity.cpp  GameEntity.h  StartScreen.cpp  StartScreen.h  Texture.cpp  Texture.h
src/SDL2/Entities/Screens/: EndScreen.cpp  EndScreen.h  IntroScreen.cpp  IntroScreen.h  InventoryScreen.cpp  InventoryScreen.h  MainScreen.cpp  MainScreen.h  PauseScreen.cpp  PauseScreen.h  ScreensManager.cpp  ScreensManager.h  ShopScreen.cpp  ShopScreen.h  StartScreen.cpp  StartScreen.h
src/SDL2/Helpers/: Cleanup.h
src/cpp/: Game.cpp
src/hpp/: Cleanup.hpp  Exceptions.hpp  Game.hpp
